numpy3 ultimo ejercicio corregido

--- a/numpy/numpy-III-operaciones-estadisticas.ipynb
+++ b/numpy/numpy-III-operaciones-estadisticas.ipynb
@@ -28,22 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.3, 0.3, 0.1, 0.8, 0.8],\n",
-       "        [1. , 0.4, 0.2, 0.1, 0.3],\n",
-       "        [0.7, 0.8, 0.5, 0.3, 0.7]],\n",
+       "array([[[0.8, 0.8, 0.7, 0.5, 0.2],\n",
+       "        [0.4, 0.7, 0.6, 0.3, 0.4],\n",
+       "        [0.2, 0. , 0.8, 0.2, 0.1]],\n",
        "\n",
-       "       [[1. , 0.6, 0.1, 0.7, 0.3],\n",
-       "        [0.4, 0.4, 0.7, 0.3, 0.4],\n",
-       "        [0.6, 0.3, 0.8, 0.6, 0.1]]])"
+       "       [[0.2, 0.4, 0.6, 0.4, 0.1],\n",
+       "        [0.7, 0.7, 0.5, 0.7, 0.5],\n",
+       "        [0.5, 0.7, 0.7, 0.4, 0.7]]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "0.5"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.8"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1"
+       "0.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "        ['', '', '', '', '']]], dtype='<U1')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,22 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[['C', 'C', 'E', 'B', 'B'],\n",
-       "        ['D', 'C', 'C', 'E', 'C'],\n",
-       "        ['B', 'B', 'A', 'C', 'B']],\n",
+       "array([[['D', 'D', 'B', 'A', 'C'],\n",
+       "        ['C', 'B', 'B', 'C', 'C'],\n",
+       "        ['C', 'E', 'D', 'C', 'C']],\n",
        "\n",
-       "       [['D', 'B', 'E', 'B', 'C'],\n",
-       "        ['C', 'C', 'B', 'C', 'C'],\n",
-       "        ['B', 'C', 'B', 'B', 'E']]], dtype='<U1')"
+       "       [['C', 'C', 'B', 'C', 'C'],\n",
+       "        ['B', 'B', 'A', 'B', 'A'],\n",
+       "        ['A', 'B', 'B', 'C', 'B']]], dtype='<U1')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "(2, 3, 5)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,22 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[['C', 'C', 'E', 'B', 'B'],\n",
-       "        ['D', 'C', 'C', 'E', 'C'],\n",
-       "        ['B', 'B', 'A', 'C', 'B']],\n",
+       "array([[['D', 'D', 'B', 'A', 'C'],\n",
+       "        ['C', 'B', 'B', 'C', 'C'],\n",
+       "        ['C', 'E', 'D', 'C', 'C']],\n",
        "\n",
-       "       [['D', 'B', 'E', 'B', 'C'],\n",
-       "        ['C', 'C', 'B', 'C', 'C'],\n",
-       "        ['B', 'C', 'B', 'B', 'E']]], dtype='<U1')"
+       "       [['C', 'C', 'B', 'C', 'C'],\n",
+       "        ['B', 'B', 'A', 'B', 'A'],\n",
+       "        ['A', 'B', 'B', 'C', 'B']]], dtype='<U1')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,44 +320,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '',\n",
-       "       '', '', '', '', '', '', '', '', '', '', '', '', ''], dtype='<U1')"
+       "array([           30873408,                   0, 7597414380956903779,\n",
+       "       8386387640092685422, 8511917019643144545, 7955925896722213985,\n",
+       "       7953763900378870794, 8083217375687632231, 6944653332839410793,\n",
+       "       7935410980476553786, 7953766387382562416, 3251647507869673522,\n",
+       "       3328260318368181809, 6992446851629719596, 3539929536506458738,\n",
+       "       3690199853871609134, 3978136634597059635, 2980594823435204400,\n",
+       "       3346295607898553866, 2896498875196207713, 3183534901335830619,\n",
+       "                        81,     139714846756000,     139714846756000,\n",
+       "       8241879965841649257, 2318844026221584754, 3179576659273588768,\n",
+       "       4122255134160728864, 3976168435753498162, 6716610011817260344])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "array2 = np.empty(30, str)\n",
+    "# solcución cambiando la forma al principio y no al final\n",
+    "array2 = np.empty(30, dtype=int)\n",
     "array2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[['', '', '', '', ''],\n",
-       "        ['', '', '', '', ''],\n",
-       "        ['', '', '', '', '']],\n",
+       "array([[[           30873408,                   0, 7597414380956903779,\n",
+       "         8386387640092685422, 8511917019643144545],\n",
+       "        [7955925896722213985, 7953763900378870794, 8083217375687632231,\n",
+       "         6944653332839410793, 7935410980476553786],\n",
+       "        [7953766387382562416, 3251647507869673522, 3328260318368181809,\n",
+       "         6992446851629719596, 3539929536506458738]],\n",
        "\n",
-       "       [['', '', '', '', ''],\n",
-       "        ['', '', '', '', ''],\n",
-       "        ['', '', '', '', '']]], dtype='<U1')"
+       "       [[3690199853871609134, 3978136634597059635, 2980594823435204400,\n",
+       "         3346295607898553866, 2896498875196207713],\n",
+       "        [3183534901335830619,                  81,     139714846756000,\n",
+       "             139714846756000, 8241879965841649257],\n",
+       "        [2318844026221584754, 3179576659273588768, 4122255134160728864,\n",
+       "         3976168435753498162, 6716610011817260344]]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,22 +384,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[['2', '2', '3', '1', '1'],\n",
-       "        ['2', '2', '2', '3', '2'],\n",
-       "        ['1', '1', '1', '2', '1']],\n",
+       "array([[[2, 2, 1, 1, 2],\n",
+       "        [2, 1, 1, 2, 2],\n",
+       "        [2, 3, 2, 2, 2]],\n",
        "\n",
-       "       [['2', '1', '3', '1', '2'],\n",
-       "        ['2', '2', '1', '2', '2'],\n",
-       "        ['1', '2', '1', '1', '3']]], dtype='<U1')"
+       "       [[2, 2, 1, 2, 2],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 2, 1]]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,6 +415,130 @@
     "            elif vacio[indice_mat,indice_fila, indice_col] == 'E':\n",
     "                array2_3d[indice_mat, indice_fila, indice_col] = 3\n",
     "array2_3d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4605380978949069210, 4605380978949069210, 4604480259023595110,\n",
+       "       4602678819172646912, 4596373779694328218, 4600877379321698714,\n",
+       "       4604480259023595110, 4603579539098121011, 4599075939470750515,\n",
+       "       4600877379321698714, 4596373779694328218,                   0,\n",
+       "       4605380978949069210, 4596373779694328218, 4591870180066957722,\n",
+       "       4596373779694328218, 4600877379321698714, 4603579539098121011,\n",
+       "       4600877379321698714, 4591870180066957722, 4604480259023595110,\n",
+       "       4604480259023595110, 4602678819172646912, 4604480259023595110,\n",
+       "       4602678819172646912, 4602678819172646912, 4604480259023595110,\n",
+       "       4604480259023595110, 4600877379321698714, 4604480259023595110])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cambiando la forma al final\n",
+    "array3 = np.empty(30, dtype=int)\n",
+    "array3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['D', 'D', 'B', 'A', 'C'],\n",
+       "        ['C', 'B', 'B', 'C', 'C'],\n",
+       "        ['C', 'E', 'D', 'C', 'C']],\n",
+       "\n",
+       "       [['C', 'C', 'B', 'C', 'C'],\n",
+       "        ['B', 'B', 'A', 'B', 'A'],\n",
+       "        ['A', 'B', 'B', 'C', 'B']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vacio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contador = 0\n",
+    "for matriz in vacio:\n",
+    "    for fila in matriz:\n",
+    "        for elemento in fila:\n",
+    "            if elemento == 'A' or elemento == 'B':\n",
+    "                array3[contador] = 1\n",
+    "            elif elemento == 'C' or elemento == 'D':\n",
+    "                array3[contador] = 2\n",
+    "            else:\n",
+    "                array3[contador] = 3\n",
+    "            contador += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 1, 1, 2, 2, 1, 1, 2, 2, 2, 3, 2, 2, 2, 2, 2, 1, 2, 2, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 2, 1])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[2, 2, 1, 1, 2],\n",
+       "        [2, 1, 1, 2, 2],\n",
+       "        [2, 3, 2, 2, 2]],\n",
+       "\n",
+       "       [[2, 2, 1, 2, 2],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 2, 1]]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array3_3d = array3.reshape(2,3,5)\n",
+    "array3_3d"
    ]
   }
  ],
