platilla pandas6 y erratas

--- a/pandas/Pandas-V-union-de-datos.ipynb
+++ b/pandas/Pandas-V-union-de-datos.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,19 +143,19 @@
        "NaN      federico.laguna@tractchun.com  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_empleados = pd.read_csv('../pandas/datos/Empleados3.csv', index_col=0)\n",
+    "df_empleados = pd.read_csv('datos/Empleados3.csv', index_col=0)\n",
     "df_empleados.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,13 +243,13 @@
        "5                   1973/5/11  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_agentes = pd.read_csv('../pandas/datos/Agentes.csv', index_col=0)\n",
+    "df_agentes = pd.read_csv('datos/Agentes.csv', index_col=0)\n",
     "df_agentes.head(5)"
    ]
   },
@@ -316,13 +316,13 @@
     }
    ],
    "source": [
-    "df_puestos = pd.read_excel('../pandas/datos/Puestos.xlsx')\n",
+    "df_puestos = pd.read_excel('datos/Puestos.xlsx')\n",
     "df_puestos.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -409,13 +409,13 @@
        "1           5.0  www.tractchun.es      1.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_2016 = pd.read_excel('../pandas/datos/2016.xlsx')\n",
+    "df_2016 = pd.read_excel('datos/2016.xlsx')\n",
     "df_2016.head(2)"
    ]
   },
@@ -504,7 +504,7 @@
     }
    ],
    "source": [
-    "df_2017 = pd.read_excel('../pandas/datos/2017.xlsx')\n",
+    "df_2017 = pd.read_excel('datos/2017.xlsx')\n",
     "df_2017.head(2)"
    ]
   },
@@ -597,7 +597,7 @@
     }
    ],
    "source": [
-    "df_2018 = pd.read_excel('../pandas/datos/2018.xlsx')\n",
+    "df_2018 = pd.read_excel('datos/2018.xlsx')\n",
     "df_2018.head(2)"
    ]
   },
@@ -686,7 +686,7 @@
     }
    ],
    "source": [
-    "df_2019 = pd.read_excel('../pandas/datos/2019.xlsx')\n",
+    "df_2019 = pd.read_excel('datos/2019.xlsx')\n",
     "df_2019.head(2)"
    ]
   },
@@ -779,7 +779,7 @@
     }
    ],
    "source": [
-    "df_2020 = pd.read_excel('../pandas/datos/2020.xlsx')\n",
+    "df_2020 = pd.read_excel('datos/2020.xlsx')\n",
     "df_2020.head(2)"
    ]
   },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
        "2          JesusGrajeda  jesus.grajeda@tractchun.com            1979/1/1"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "1          2  JesusGrajeda  jesus.grajeda@tractchun.com            1979/1/1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "1   NaN           10   MENDEZ  RICARDO  15-24100  ricardo.mendez@tractchun.com"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1149,8 +1149,9 @@
        "4           5.0  "
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1160,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1389,7 @@
        "[97498 rows x 10 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1418,7 @@
        "Index(['Turno', 'ID Empleado', 'Apellido', 'Nombre', 'ID Puesto', 'Email'], dtype='object')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1552,7 @@
        "4          MANTENIMIENTO   Mandos Medios  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
