--- a/pandas/Pandas-III-metodos-pandas.ipynb
+++ b/pandas/Pandas-III-metodos-pandas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +114,15 @@
     "            print(col, len(dataframe[col].value_counts()))\n",
     "        else:\n",
     "            print(col, len(dataframe[col].value_counts()))\n",
-    "            print(f\"Los valores son: {dataframe[col].unique()}\")"
+    "            print(f\"Los valores únicos de la columna '{col}' son: {dataframe[col].unique()}\")\n",
+    "    print(\"--------------\")\n",
+    "    print(\"A continuación el resultado del método .info():\")\n",
+    "    dataframe.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -375,31 +378,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>518</th>\n",
+       "      <th>1888</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>665</td>\n",
-       "      <td>MONGE</td>\n",
-       "      <td>MARIA</td>\n",
-       "      <td>45-11000</td>\n",
-       "      <td>maria.monge@tractchun.com</td>\n",
+       "      <td>423</td>\n",
+       "      <td>GALAZ</td>\n",
+       "      <td>MARLET</td>\n",
+       "      <td>15-24100</td>\n",
+       "      <td>marlet.galaz@tractchun.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>628</th>\n",
+       "      <th>1730</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>1195</td>\n",
-       "      <td>Lennis</td>\n",
-       "      <td>Maria</td>\n",
-       "      <td>70-21100</td>\n",
-       "      <td>maria.lennis@tractchun.com</td>\n",
+       "      <td>1503</td>\n",
+       "      <td>Monsalve</td>\n",
+       "      <td>Gloria</td>\n",
+       "      <td>45-11000</td>\n",
+       "      <td>gloria.monsalve@tractchun.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Turno  ID Empleado Apellido Nombre ID Puesto                       Email\n",
-       "518   NaN          665    MONGE  MARIA  45-11000   maria.monge@tractchun.com\n",
-       "628   NaN         1195   Lennis  Maria  70-21100  maria.lennis@tractchun.com"
+       "     Turno  ID Empleado  Apellido  Nombre ID Puesto  \\\n",
+       "1888   NaN          423     GALAZ  MARLET  15-24100   \n",
+       "1730   NaN         1503  Monsalve  Gloria  45-11000   \n",
+       "\n",
+       "                              Email  \n",
+       "1888     marlet.galaz@tractchun.com  \n",
+       "1730  gloria.monsalve@tractchun.com  "
       ]
      },
      "metadata": {},
@@ -596,12 +603,27 @@
       "--------------\n",
       "El numero de valores distintos de cada columna es:\n",
       "Turno 4\n",
-      "Los valores son: ['A' nan 'B' 'C' 'D']\n",
+      "Los valores únicos de la columna 'Turno' son: ['A' nan 'B' 'C' 'D']\n",
       "ID Empleado 2000\n",
       "Apellido 376\n",
       "Nombre 565\n",
       "ID Puesto 75\n",
-      "Email 2000\n"
+      "Email 2000\n",
+      "--------------\n",
+      "A continuación el resultado del método .info():\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2000 entries, 0 to 1999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   Turno        8 non-null      object\n",
+      " 1   ID Empleado  2000 non-null   int64 \n",
+      " 2   Apellido     2000 non-null   object\n",
+      " 3   Nombre       2000 non-null   object\n",
+      " 4   ID Puesto    2000 non-null   object\n",
+      " 5   Email        2000 non-null   object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 93.9+ KB\n"
      ]
     }
    ],
@@ -611,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -841,31 +863,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>46</td>\n",
-       "      <td>Rosa Olguin</td>\n",
-       "      <td>rosa.olguin@tractchun.com</td>\n",
-       "      <td>1985/5/30</td>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>A. Trejo</td>\n",
+       "      <td>alberto.trejo@tractchun.com</td>\n",
+       "      <td>1988/3/9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>39</td>\n",
-       "      <td>Jesus Contreras</td>\n",
-       "      <td>jesus.contreras@tractchun.com</td>\n",
-       "      <td>1983/10/20</td>\n",
+       "      <th>47</th>\n",
+       "      <td>48</td>\n",
+       "      <td>Aurelio Tanori</td>\n",
+       "      <td>aurelio.tanori@tractchun.com</td>\n",
+       "      <td>1979/8/29</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    ID Agente           Nombre                          email  \\\n",
-       "45         46      Rosa Olguin      rosa.olguin@tractchun.com   \n",
-       "38         39  Jesus Contreras  jesus.contreras@tractchun.com   \n",
+       "    ID Agente          Nombre                         email  \\\n",
+       "5           6        A. Trejo   alberto.trejo@tractchun.com   \n",
+       "47         48  Aurelio Tanori  aurelio.tanori@tractchun.com   \n",
        "\n",
        "   Fecha de Nacimiento  \n",
-       "45           1985/5/30  \n",
-       "38          1983/10/20  "
+       "5             1988/3/9  \n",
+       "47           1979/8/29  "
       ]
      },
      "metadata": {},
@@ -1050,7 +1072,20 @@
       "ID Agente 50\n",
       "Nombre 50\n",
       "email 50\n",
-      "Fecha de Nacimiento 50\n"
+      "Fecha de Nacimiento 50\n",
+      "--------------\n",
+      "A continuación el resultado del método .info():\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50 entries, 0 to 49\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   ID Agente            50 non-null     int64 \n",
+      " 1   Nombre               50 non-null     object\n",
+      " 2   email                50 non-null     object\n",
+      " 3   Fecha de Nacimiento  50 non-null     object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 1.7+ KB\n"
      ]
     }
    ],
@@ -1060,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1408,32 +1443,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10108</th>\n",
-       "      <td>SWLEER-7642581603</td>\n",
-       "      <td>2016-07-30</td>\n",
-       "      <td>1970.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>Software</td>\n",
-       "      <td>Problema</td>\n",
-       "      <td>2 - Normal</td>\n",
-       "      <td>1 - Baja</td>\n",
+       "      <th>11111</th>\n",
+       "      <td>TDLTSR-4642446131</td>\n",
+       "      <td>2016-03-17</td>\n",
+       "      <td>1433.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>Sistema</td>\n",
+       "      <td>Solicitud</td>\n",
+       "      <td>4 - Crítico</td>\n",
+       "      <td>0 - Sin Asignar</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>www.tractchun.es</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10504</th>\n",
-       "      <td>SWLTSR-9242704742</td>\n",
-       "      <td>2016-11-30</td>\n",
-       "      <td>894.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Sistema</td>\n",
+       "      <th>12362</th>\n",
+       "      <td>TMLTER-6942403829</td>\n",
+       "      <td>2016-02-03</td>\n",
+       "      <td>192.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Software</td>\n",
        "      <td>Solicitud</td>\n",
        "      <td>2 - Normal</td>\n",
-       "      <td>1 - Baja</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2 - Media</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>www.tractchun.es</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -1443,16 +1478,16 @@
       ],
       "text/plain": [
        "               ID Ticket      Fecha  ID Empleado  ID Agente Categoría  \\\n",
-       "10108  SWLEER-7642581603 2016-07-30       1970.0       46.0  Software   \n",
-       "10504  SWLTSR-9242704742 2016-11-30        894.0        7.0   Sistema   \n",
+       "11111  TDLTSR-4642446131 2016-03-17       1433.0       31.0   Sistema   \n",
+       "12362  TMLTER-6942403829 2016-02-03        192.0       18.0  Software   \n",
        "\n",
-       "            Tipo   Severidad Prioridad  Días Resolución  Satisfacción  \\\n",
-       "10108   Problema  2 - Normal  1 - Baja              6.0           5.0   \n",
-       "10504  Solicitud  2 - Normal  1 - Baja              8.0           4.0   \n",
+       "            Tipo    Severidad        Prioridad  Días Resolución  Satisfacción  \\\n",
+       "11111  Solicitud  4 - Crítico  0 - Sin Asignar              6.0           4.0   \n",
+       "12362  Solicitud   2 - Normal        2 - Media              9.0           5.0   \n",
        "\n",
        "                    Web  Índice   \n",
-       "10108  www.tractchun.es      1.0  \n",
-       "10504  www.tractchun.es      1.0  "
+       "11111  www.tractchun.es      1.0  \n",
+       "12362  www.tractchun.es      1.0  "
       ]
      },
      "metadata": {},
@@ -1712,21 +1747,42 @@
       "ID Empleado 1999\n",
       "ID Agente 50\n",
       "Categoría 4\n",
-      "Los valores son: ['Acceso&%Login' 'Sistema' 'Software' 'Hardware' nan]\n",
+      "Los valores únicos de la columna 'Categoría' son: ['Acceso&%Login' 'Sistema' 'Software' 'Hardware' nan]\n",
       "Tipo 2\n",
-      "Los valores son: ['Problema' 'Solicitud' nan]\n",
+      "Los valores únicos de la columna 'Tipo' son: ['Problema' 'Solicitud' nan]\n",
       "Severidad 5\n",
-      "Los valores son: ['0 - Sin Clasificar' '2 - Normal' '4 - Crítico' nan '3 - Mayor'\n",
+      "Los valores únicos de la columna 'Severidad' son: ['0 - Sin Clasificar' '2 - Normal' '4 - Crítico' nan '3 - Mayor'\n",
       " '1 - Menor']\n",
       "Prioridad 4\n",
-      "Los valores son: ['0 - Sin Asignar' nan '3 - Alta' '2 - Media' '1 - Baja']\n",
+      "Los valores únicos de la columna 'Prioridad' son: ['0 - Sin Asignar' nan '3 - Alta' '2 - Media' '1 - Baja']\n",
       "Días Resolución 21\n",
       "Satisfacción 5\n",
-      "Los valores son: [ 5.  1.  4. nan  3.  2.]\n",
+      "Los valores únicos de la columna 'Satisfacción' son: [ 5.  1.  4. nan  3.  2.]\n",
       "Web 1\n",
-      "Los valores son: ['www.tractchun.es' nan]\n",
+      "Los valores únicos de la columna 'Web' son: ['www.tractchun.es' nan]\n",
       "Índice  1\n",
-      "Los valores son: [ 1. nan]\n"
+      "Los valores únicos de la columna 'Índice ' son: [ 1. nan]\n",
+      "--------------\n",
+      "A continuación el resultado del método .info():\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13051 entries, 0 to 13050\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column           Non-Null Count  Dtype         \n",
+      "---  ------           --------------  -----         \n",
+      " 0   ID Ticket        13050 non-null  object        \n",
+      " 1   Fecha            13025 non-null  datetime64[ns]\n",
+      " 2   ID Empleado      13049 non-null  float64       \n",
+      " 3   ID Agente        13050 non-null  float64       \n",
+      " 4   Categoría        13038 non-null  object        \n",
+      " 5   Tipo             13050 non-null  object        \n",
+      " 6   Severidad        13025 non-null  object        \n",
+      " 7   Prioridad        13025 non-null  object        \n",
+      " 8   Días Resolución  13049 non-null  float64       \n",
+      " 9   Satisfacción     13037 non-null  float64       \n",
+      " 10  Web              13024 non-null  object        \n",
+      " 11  Índice           13038 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(5), object(6)\n",
+      "memory usage: 1.2+ MB\n"
      ]
     }
    ],
