--- a/estadistica/estadistica-III-tablas-contingencia-intervalos-confianza.ipynb
+++ b/estadistica/estadistica-III-tablas-contingencia-intervalos-confianza.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4              1        Low           Some  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "All             0.000181  0.205325  0.250033  0.500011   0.044450  1.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "All                1.000000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "0.82"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,14 +484,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_764/1457494478.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/tmp/ipykernel_2201/741248900.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sns.heatmap(df.corr()[['Sales']], cmap= 'mako', annot= True, vmin= -1, vmax= 1)\n"
      ]
     },
@@ -501,7 +501,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -523,16 +523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f666449a560>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f968a53a9e0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -571,14 +571,14 @@
        "2.79"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# sesgo de la columna 'Customers'\n",
-    "skewness = round(skew(df['Customers']), 2)\n",
+    "skewness = round(st.skew(df['Customers']), 2)\n",
     "skewness"
    ]
   },
@@ -592,60 +592,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_764/3371255665.py:2: DeprecationWarning: Use of keyword argument 'alpha' for method 'interval' is deprecated and wil be removed in SciPy 1.11.0. Use first positional argument or keyword argument 'confidence' instead.\n",
-      "  st.t.interval(alpha=0.95, df=len(df['Sales'])-1, loc=np.mean(df['Sales']), scale=st.sem(df['Sales']))\n"
+      "/tmp/ipykernel_2201/4205347810.py:2: DeprecationWarning: Use of keyword argument 'alpha' for method 'interval' is deprecated and wil be removed in SciPy 1.11.0. Use first positional argument or keyword argument 'confidence' instead.\n",
+      "  st.t.interval(alpha=0.95, df=len(df['Sales']), loc=np.mean(df['Sales']), scale=st.sem(df['Sales']))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(6948.8932172864725, 6962.135364225432)"
+       "(6948.893217286484, 6962.13536422542)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Intervalo de confianza de la columna 'Sales'\n",
-    "st.t.interval(alpha=0.95, df=len(df['Sales'])-1, loc=np.mean(df['Sales']), scale=st.sem(df['Sales']))"
+    "st.t.interval(alpha=0.95, df=len(df['Sales']), loc=np.mean(df['Sales']), scale=st.sem(df['Sales']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_764/502794808.py:2: DeprecationWarning: Use of keyword argument 'alpha' for method 'interval' is deprecated and wil be removed in SciPy 1.11.0. Use first positional argument or keyword argument 'confidence' instead.\n",
-      "  st.t.interval(alpha=0.99, df=len(df['Customers'])-1, loc=np.mean(df['Customers']), scale=st.sem(df['Customers']))\n"
+      "/tmp/ipykernel_2201/1871709406.py:2: DeprecationWarning: Use of keyword argument 'alpha' for method 'interval' is deprecated and wil be removed in SciPy 1.11.0. Use first positional argument or keyword argument 'confidence' instead.\n",
+      "  st.t.interval(alpha=0.99, df=len(df['Customers']), loc=np.mean(df['Customers']), scale=st.sem(df['Customers']))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(761.6036946094314, 763.85309560175)"
+       "(761.6036946094345, 763.853095601747)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Intervalo de confianza de la columna 'Customers'\n",
-    "st.t.interval(alpha=0.99, df=len(df['Customers'])-1, loc=np.mean(df['Customers']), scale=st.sem(df['Customers']))"
+    "st.t.interval(alpha=0.99, df=len(df['Customers']), loc=np.mean(df['Customers']), scale=st.sem(df['Customers']))"
    ]
   },
   {
